<resources>
    <string name="app_name">NoteKeeper</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_note">Edit Note</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="note_title_hint">Note title</string>
    <string name="note_text_hint">Note text</string>
    <string name="nav_share_message">Don\'t you think you\'ve shared enough</string>
    <string name="nav_send_message">Send</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!--General Preferences-->
    <!--Header-->
    <string name="pref_general_header">General</string>
    <!--Display name-->
    <string name="pref_summary_user_display">The name would like be displayed</string>
    <string name="pref_title_user_display_summary">The name would like be displayed</string>
    <string name="pref_key_user_display_name" translatable="false">user_display_name</string>
    <string name="pref_default_user_display">Your name</string>
    <!--Email-->

    <string name="pref_summary_email_address">Your email address</string>
    <string name="pref_title_email_address">The name would like be displayed</string>
    <string name="pref_key_email_address" translatable="false">user_email_address</string>
    <string name="pref_default_email_address">yourname@host.com</string>


    <string name="settings_title">Settings</string>
    <string name="general_preferences_title">General Settings</string>
    <string name="pref_key_list_social" translatable="false">list_social_media_preference</string>
    <string name="action_delete_string">Delete All</string>
    <string name="action_set_reminder_string">Set Reminder</string>

    <string name="note_reminder_notification_title_template">Note reminder: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="note_reminder_notification_placeholder_text_template">You said %1$s and lorem
        ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit
        vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>
    <string name="channel_name" translatable="false">NoteReminder</string>
    <string name="channel_description">Note keeper reminder notification</string>
    <string name="action_backup_string">Backup notes</string>
    <string name="actio_upload_notes_string">Upload notes</string>

</resources>
